--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,5 +1,13 @@
-<h1> {{test1}} </h1>
+<app-nav></app-nav>
 
-<ul>
-<li *ngFor='let user of users'> {{user.id}} - {{user.userName}} </li>
-</ul>
+<!--
+    <div class="container" style="margin-top:100px">
+    <ul>
+        <li *ngFor='let user of users'> {{user.id}} - {{user.userName}} </li>
+    </ul>
+    </div>
+-->
+
+<div class="container" style="margin-top:100px">
+    <app-home></app-home>
+</div>
